# quality/fx1_openapi_surface.json
@@ -66,6 +66,30 @@
       }
     },
     "/harness/jobs": {
+      "get": {
+        "params": [
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "required": false
+          }
+        ],
+        "request_body_required": null,
+        "responses": [
+          "200",
+          "422"
+        ]
+      },
       "post": {
         "params": [
           {
@@ -82,6 +106,20 @@
       }
     },
     "/harness/jobs/{job_id}": {
+      "delete": {
+        "params": [
+          {
+            "name": "job_id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "request_body_required": null,
+        "responses": [
+          "200",
+          "422"
+        ]
+      },
       "get": {
         "params": [
           {
@@ -160,5 +198,5 @@
       }
     }
   },
-  "schema_sha256": "92755cfee117a7f725a2ffe52b8b7d38c9c4df82af40f41bc53881108e87d1df"
+  "schema_sha256": "f8ae33010254693c08be13961c05803e8804607795a9b870a972c4698ccf9e07"
 }
